# txtview

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  vcpkg.json
src/: demo.cpp  main.cpp
src/txtview/: config.h  config.hpp  conversions.c  conversions.cpp  conversions.h  file.cpp  file.hpp  fontset-directwrite.inl  fontset-fontconfig.inl  fontset.cpp  fontset.hpp  fontset_p.hpp  measurement.hpp  text.cpp  text.hpp  text_document.cpp  text_document.hpp  text_p.hpp  utils.hpp
